--- a/index.html
+++ b/index.html
@@ -7,9 +7,37 @@
     <title>homework #1</title>
 </head>
 <body>
-    <h1>WebStudio</h1>
-    <ul>
-        <li><a> href="Studio"</a>></li>
-    </ul>
+    <!-- Page Header  -->
+    <header>
+    <h1>
+        <a href="">WebStudio</a>
+    </h1>
+
+        <!-- Navigation menu to other pages  -->
+        <div class="top-nav">
+            <a href="">Studio</a>
+            <a href="">Portfolio</a>
+            <a href="">Contacts</a>
+        </div>
+    </header>
+
+    <h2>What we do</h2>
+    <img src="/images/img1.jpg">
+    <img src="/images/img2.jpg">
+    <img src="/images/img3.jpg">
+
+
+    <h2>Our Team</h2>
+    <img src="/images/img4.jpg">
+    <img src="/images/img5.jpg">
+    <img src="/images/img6.jpg">
+    <img src="/images/img7.jpg">
 </body>
+
+<footer>
+WebStudio
+<p>695 Park Ave, New York, NY 10065, <br>United States</p>
+
+</footer>
+
 </html>
