--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework #1</title>
 </head>
+
+<main>
 <body>
     <!-- Page Header  -->
     <header>
-    <h1>
-        <a href="">WebStudio</a>
-    </h1>
+        <nav>
+            <a href="">WebStudio</a>
+        </nav>
 
         <!-- Navigation menu to other pages  -->
         <div class="top-nav">
@@ -21,21 +23,40 @@
         </div>
     </header>
 
-    <h2>What we do</h2>
-    <img src="/images/img1.jpg">
-    <img src="/images/img2.jpg">
-    <img src="/images/img3.jpg">
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+12127724150">+12127724150</a>
+
+    <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+    <button type="button">Order a service</button>
+
+    <h2>ATTENTION TO DETAILS</h2>
+    <p>We go into all the details and processes of your business to develop a customized solution</p>
+
+    <h2>PUNCTUALITY</h2>
+    <p>With us, you can feel safe and secure. An important principle of the company: respect your time and respect the agreed deadlines</p>
+
+    <h2>PLANNING</h2>
+    <p>You will be able to observe and participate in every phase of solution development and implementation</p>
+
+    <h2>MODERN TECHNOLOGIES</h2>
+    <p>We use innovative tools to solve assigned tasks. It's time to simplify work processes</p>
+
+    <h1>What we do</h1>
+    <img src="./images/img1.jpg" alt="" width="">
+    <img src="./images/img2.jpg" alt="" width="">
+    <img src="./images/img3.jpg" alt="" width="">
 
 
-    <h2>Our Team</h2>
-    <img src="/images/img4.jpg">
-    <img src="/images/img5.jpg">
-    <img src="/images/img6.jpg">
-    <img src="/images/img7.jpg">
+    <h1>Our Team</h1>
+    <img src="./images/img4.jpg" alt="" width="">
+    <img src="./images/img5.jpg" alt="" width="">
+    <img src="./images/img6.jpg" alt="" width="">
+    <img src="./images/img7.jpg" alt="" width="">
 </body>
+</main>
 
 <footer>
-WebStudio
+<a href="">WebStudio</a>
 <p>695 Park Ave, New York, NY 10065, <br>United States</p>
 
 </footer>
